2000-10-11  MenTaLguY <mental@rydia.net>

	(This log entry is written by Masatake YAMATO).
	
	* Makefile.am (EXTRA_DIST): Added input-png.*.
	(input_png_src): Likewise. 

	* configure.in: Added png check code.
	Masatake YAMATO also added STAGE1 check.

	* input-png.[hc]: New files.	

2000-10-11  Masatake YAMATO  <yamato@redhat.com>

 	* main.c: Include input.h only.
	(input_extension): Comment out unused variable.
	(set_*_input_format): Removed. Use input_get_handler* instead.
	(INPUT_SUFFIX_LIST): Move to input.h.
	(list-output-formats): A option renamed from list-formats.
	(list-input-formats): New option.

	* configure.in(AM_INIT_AUTOMAKE): Define package and version.

	* Makefile.am (autotrace_SOURCES): Added input.c and .h.

	* output.h (OUTPUT_SUFFIX_LIST): Move definition from
	main.c.

	* version.c(version_string): Append VERSION defined 
	in configure.in.

	* input.[hc]: New file.
	  input.[hc] is based on a patch from "MenTaLguY"
	  <mental@rydia.net>.	

2000-10-04  Masatake YAMATO  <yamato@redhat.com>

	* output-emf.c: Revised by 
	Enrico Persiani <persiani at students.cs.unibo.it>.

	  1. Fixed a bug that caused crashes when the output 
	  was redirected to stdout

	  2. Cleaned the code from unused variable definitions

	  3. Removed a data-type (EMFPoint) and a function (write8) 
	  not used by the main conversion code.

2000-10-03  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Fix a typo. (MAGIC->MAGICK).

	* Makefile.am (EXTRA_DIST): Added input-magick.[ch].

	* output-emf.c (OutputEmf): Set return type to void.

	* output.c: Added emf as a new output format.

	* Makefile.am (output_src): Added output-emf.[ch].

	* main.c (INPUT_SUFFIX_LIST): Renamed SUFFIX_LIST.
	(OUTPUT_SUFFIX_LIST): New constant.
	(OUTPUT_SUFFIX_LIST): Added emf as a new output format.

	* output-emf.[hc]: New files from 
	  Enrico Persiani <persiani at students.cs.unibo.it>.

	
2000-10-01  Masatake YAMATO  <yamato@redhat.com>
